# bold

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  Xargo.toml  aarch64-none-elf.json  arm-none-eabihf.json  build.rs
.cargo/: config.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: bold-build.yml  build-image.yml  build.yml  labeler.yml  rebase.yml  rust-nightly-ci.yml  security_audit.yml
doc/: ipc-idea.txt
res/: credits.txt
scripts/: bdf2hex.pl  bdfhex2png.py  font2rust.py  gdb_attach.sh  parse_bt.py  parse_esr.py  prepare_kernel_accessories.sh  run_kernel
src/: console.rs  driver_manager.rs  file_interface.rs  framebuffer.rs  framebuffer_console.rs  framebuffer_textmode.rs  ipc.rs  kshell.rs  ktask.rs  lang_items.rs  lib.rs  main.rs  prelude.rs  sleep_queue.rs  syscalls.rs  threads.rs  utils.rs
src/arch/: mod.rs
src/arch/aarch64/: dtb.rs  entropy.rs  exceptions.rs  framebuffer.rs  init.rs  interrupts.rs  linker.ld  mailbox.rs  mailbox_methods.rs  mmio.rs  mmu.rs  mod.rs  phymem.rs  qemu_uart.rs  sdhc.rs  tty.rs  uart.rs  uart0.rs  uart1.rs  usb.rs  virtmem.rs
src/arch/aarch64/usb/: hcd.rs  mod.rs  regs.rs
src/boot/: mod.rs  parse_initrd.rs
src/fonts/: iso.binfont  iso88591.binfont  mod.rs  terminus.binfont  tremolo.binfont  vga.binfont
src/ipc/: dir.rs  mod.rs  signal.rs  spsc_mux.rs  spsc_queue.rs  well_known.rs
targets/: aarch64-none-elf.json
usermode/example_app/: .gitignore  Makefile  main.c
