[package]
name = "boldos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true
debug = true

[dependencies]
linked_list_allocator = "0.9"
spin = "0.5"
qemu-exit = "2.0.0"
async-trait = "0.1.50"
