[package]
name = "boldos"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Wazzaps/bold"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
lto = true
debug = true
opt-level = 'z'

[profile.test]
lto = true
debug = true
opt-level = 'z'

[profile.release]
panic = "abort"
lto = true
debug = true
opt-level = 'z'

[dependencies]
linked_list_allocator = "0.9"
spin = "0.9.2"
qemu-exit = "2.0.1"
async-trait = "0.1.51"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
arrayvec = { version = "0.7.1", default-features = false }
dtb = "0.2.0"
tar-parser = { path = "externals/tar-parser.rs", default-features = false}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
cortex-a = "7.0.0"
tock-registers = "0.7.0"
num_enum = { version = "0.5.4", default-features = false }
